# openshift-virtualization-tests

./: .coderabbit.yaml  .dockerignore  .flake8  .gitignore  .gitlint  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Dockerfile  JOB_INSIGHT_PROMPT.md  Makefile  OWNERS  README.md  TESTS_ORACLE.MD  conftest.py  pyproject.toml  pytest.ini  renovate.json  setup.py  tox.ini
.github/: in-solidarity.yml  labeler.yml  pull_request_template.md
.github/workflows/: auto-retest-needs-rebase.yml  build_container.yml  cherrypick-to-4.99.yml  close-stale-prs.yml  component-builder-publish.yml  component-builder.yml  jira_script.yml  jira_validation.yml  labeler.yml  net-utils-builder-staging.yml  net-utils-promote.yml  pr-title-labeler.yml  pr_stats.yml  request-coderabbit-test-instructions.yml  smoke-tests-label-from-coderabbit.yml  utilities-unit-tests.yml  validate-coderabbit-schema.yml
ci_scripts/: utils.py
ci_scripts/jira_scripts/: check_jira_status.py
ci_scripts/polarion/: polarion_set_automated.py  polarion_utils.py  polarion_verify_tc_requirement.py
containers/fedora/: README.md  build.sh  get_fedora_password.py  user-data
containers/internal_http/: README.txt
containers/utility/: Dockerfile  README.md
docs/: AI_CONTRIBUTION_POLICY.md  ARCHITECTURE_SUPPORT.md  CODING_AND_STYLE_GUIDE.md  CONTAINERIZE_TESTS.md  CONTRIBUTING.md  DEVELOPER_GUIDE.md  GETTING_STARTED.md  INSTALL_AND_UPGRADE.md  MAINTAINER_GUIDELINES.md  MULTIARCH.md  OWNERS.md  QUARANTINE.md  QUARANTINE_GUIDELINES.md  RUNNING_TESTS.md  SOFTWARE_TEST_DESCRIPTION.md
libs/infra/: images.py
libs/net/: OWNERS  cluster.py  ip.py  netattachdef.py  traffic_generator.py  udn.py  vmspec.py
libs/storage/: config.py
libs/vm/: affinity.py  factory.py  spec.py  vm.py
scripts/: __init__.py
scripts/quarantine_stats/: generate_dashboard.py
scripts/std_placeholder_stats/: std_placeholder_stats.py
scripts/tests_analyzer/: README.md  compare_coderabbit_decisions.py  pytest_marker_analyzer.py
tests/: conftest.py  global_config.py  global_config_amd64.py  global_config_arm64.py  global_config_aro.py  global_config_aws.py  global_config_gcnv.py  global_config_gcp.py  global_config_ibm_spectrum_sc.py  global_config_interop.py  global_config_interop_sno.py  global_config_lvms.py  global_config_multiarch.py  global_config_nfs.py  global_config_oci.py  global_config_rh_it.py  global_config_s390x.py  global_config_sno.py  global_config_sno_hpp.py  global_config_x86_64.py  os_params.py  upgrade_params.py  utils.py
tests/after_cluster_deploy_sanity/: test_after_cluster_deploy_sanity.py
tests/chaos/: OWNERS  conftest.py  constants.py  utils.py
tests/cross_cluster_live_migration/: OWNERS  README.md  conftest.py  test_cclm.py  utils.py
tests/data_protection/: OWNERS
tests/deprecated_api/: test_deprecation_audit_logs.py
tests/infrastructure/: OWNERS  conftest.py  utils.py
utilities/: OWNERS  architecture.py  artifactory.py  bitwarden.py  cluster.py  console.py  constants.py  cpu.py  data_collector.py  data_utils.py  database.py  exceptions.py  guest_support.py  hco.py  infra.py  jira.py  junit_ai_utils.py  logger.py  monitoring.py  must_gather.py  network.py  oadp.py  operator.py  os_utils.py  pytest_matrix_utils.py  pytest_utils.py  sanity.py  ssp.py  storage.py  virt.py  vnc_utils.py
(+655 files in other folders)
