[tool.poetry]
name = "openshift-virtualization-tests"
version = "0.0.0"
description = "Verification tests for Openshift Virtualization"
authors = ["dbasunag <dbasunag@redhat.com>"]
license = "Apache License 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
openshift-python-wrapper = "^10.0.12"
openshift-operator-utilities = "^1.0.0"
jira = "^3.6.0"
pylero = "^0.0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
