[tool.poetry]
name = "openshift-virtualization-tests"
version = "0.0.0"
description = "Verification tests for Openshift Virtualization"
authors = ["dbasunag <dbasunag@redhat.com>"]
license = "Apache License 2.0"
readme = "README.md"
packages = [{ include = "*" }]

[tool.poetry.dependencies]
python = "^3.8"
openshift-python-wrapper = "^10.0.12"
openshift-operator-utilities = "^1.0.0"
jira = "^3.6.0"
pylero = "^0.0.9"
pytest = "^8.0.0"
pytest-testconfig = "^0.2.0"
python-simple-logger = "^1.0.9"
pyhelper-utils = "^0.0.8"
netaddr = "^1.2.1"


[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.13"
ipython = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
